style.css
@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap'); 

html {
  overflow-x: hidden;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #0f0f0f;
  color: #ebebeb;
  font-family:'PT Sans', sans-serif;
  font-size: large;
  margin: 0;
  overflow-x: hidden;
}

header {
  display: flex;
  justify-content: space-around;
  align-items: flex;
  width: 90%;
  margin: 10px 0 18px 0;
}

h1 {
  margin: 0 0 0 35px;
  font-family: 'Acme', sans-serif;
  color: #74040f;
  font-size: x-large;
}

h2 {
  margin: 0;
}

a {
  text-decoration: none;
  color: #74040f;
  font-size: medium;
}

a:hover {
  color: #8d0714;
  text-decoration: none; 
}


footer {
  margin-top: auto;
  padding: 10px;
  text-align: center;
  font-size: medium;
  width: 90%;
} 

.header-text, 
.banner-text {
  font-size: x-large;
  font-weight: bolder;
}

.bg-header-image, 
.banner-image {
  border-radius: 3%;
}


.modal-content {
  display: none;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 100%;
  color: #74040f;
  font-weight: bolder;
}

.modal-box {
  background-color: white;
  position: absolute;
  top: 30%;
  left: 30%;
  width: 40%;
  height: 40%;
  padding: 20px;
  border-radius: 5px;
  border: 2px solid #74040f;
  text-align: center;
  overflow: scroll;
}

.close {
  color: Black;
  float: right;
}

.close:hover {
  color: #74040f;
  cursor: pointer;
}

.anime-genres {
  display: flex;
  flex-flow: row wrap;
  justify-content: left;
  width: 90%
}

.image-title-div{
  display: flex;
  height: 250px;
  text-align: center;
  justify-content: space-between;
  background: #000000;
  width: 170px;
  padding: 0;
  margin: 0 7px 20px 7px;
  transition: transform .4s;
  position: relative;
  
}

.image-title-div:hover{
  transform: scale(1.1);
 }


.anime-button{
  display: none
}

 /* Source: https://www.w3schools.com/howto/howto_css_button_on_image.asp*/
.image-title-div:hover .anime-button {
  display: block;
  position: absolute;
  top: 40%;
  left: 20%;
  background: #74040f;
  color: white;
  font-size: 16px;
  padding: 12px 24px;
  border: solid #74040f;
  cursor: pointer;
  border-radius: 5px;
}

.anime-images, 
.anime-search-images {
  height: 250px;
  width: 170px;
}

#search-shows {
  background: transparent;
  border: none;
  border: 2px solid #74040f;
  color: #ffffff;
 }
 
 #search-button {
   width: 70px;
   background: transparent;
   border: none;
   color: #74040f;
   font-size: large;
   padding: 0;
 }

 #search-button:hover {
   cursor: pointer;
   color: #8d0714;
 }

#main-container, 
#banner-container {
  display: flex;
  justify-content: center;
  background-image: linear-gradient(to right, #c2ecff, #f8dbff, #c2ecff);
  height: 600px;
  align-items: center;
  width: 100vw;
  margin: 0 0 35px 0;
}

#banner-container {
  background-image: linear-gradient(to right, #DDD055, #E88D67, #DDD055);
}

#main-border, 
#banner-border {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background-image: url("https://images.unsplash.com/photo-1554034483-04fda0d3507b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3300&q=80");
  height: 400px;
  align-items: center;
  font-size: larger;
  font-weight: bolder;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#banner-border {
  background-image: url('https://images.unsplash.com/photo-1580508244245-c446ca981a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80');
}

#main-text, 
#banner-text {
  width: 300px;
  margin: 25px;
  color: #ffffff;
  background: #f8dbff49;
  text-align: center;
  padding: 5px;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  font-size: large;
}

#main-image,
#banner-image {
  margin: 25px;
}

#image-container,
#currently-airing,
#upcoming-genre, 
#action-genre, 
#fantasy-genre, 
#romance-genre {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  width: 100%;
}

#search-header {
  text-align: center;
  margin-bottom: 20px;
}

#search-images {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: flex-end;
  width: 90%;
}

#current-images,
#upcoming-images,
#action-images, 
#fantasy-images, 
#romance-images {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  overflow: scroll;
  height: 310px;
  align-items: flex-end;
  width: 90%;
  border-top: 5px solid #740407 ;
  margin-bottom: 10px;
}

#back-up-div {
  display: flex;
  justify-content: center;
  text-align: right;
}

#back-up {
  border-radius: 50%;
  border: #74040f solid;
  height: 50px;
  width: 50px;
  font-size: xx-large;
  margin: 0 0 7px 0;
}

#back-up:hover {
  background: #a9a9a9;
}

#back-up:hover {
  cursor: pointer;
}

#linkedin, 
#github {
  width: 25px;
}

@media only screen and (max-width: 650px) {

  #anime-search-form {
    margin: 0;
  }

  h1 {
    margin: 0;
  }

  .bg-header-image, 
  .banner-image {
    width: 130px;
  }

  .modal-box {
    top: 30%;
    left: 17%;
    width: 60%;
    height: 40%;
    padding: 10px 5px 10px 5px;
  }

  #main-border, 
  #main-border {
    height: 100%;
    align-items: center;
  }


}

@media only screen and (max-width: 540px) {

  .modal-box {
    left: 13%;
    width: 70%;
  }

  .bg-header-image, 
  .banner-image {
    width: 150px;
    margin: 0;
  }

  #main-text, 
  #banner-text {
    margin: 0;
  }

  #banner-border {
    height: 600px;
  }

  #search-shows {
    width: 80px;
  }

}

